<resources>
    <string name="app_name">Shooting Timer</string>
    <string name="warning">Warning</string>
    <string name="warning_text">Shooters must wear proper hearing protection when using this app.</string>
    <string name="agree">I Agree</string>
    <string name="continue_string">Continue</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="timer">00:00.000</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="duration_label">Round Duration</string>
    <string name="start_in_label">Start In</string>
    <string name="time_between_items">Time Between Items</string>
    <string name="finished">Finished!</string>
    <string name="ready">Ready?</string>
    <string name="new_round">New Round</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
