<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_round"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rockyourglock.android.shootingtimer.RoundActivity">

    <TextView
        android:id="@+id/tv_timer"
        android:textColor="@color/colorAccent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/timer"
        android:textSize="30dp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/tv_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_timer"
        android:layout_marginTop="20dp"
        android:text="Ready?"
        android:textSize="30dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_start_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_timer"
        android:text="@string/start"
        android:background="@drawable/outline_button"
        android:onClick="startRound"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/outline_button"
        android:onClick="backToSettings"/>

    <Button
        android:id="@+id/btn_stop"
        android:text="@string/pause"
        android:background="@drawable/outline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:onClick="pauseRound"/>

    <Button
        android:id="@+id/btn_resume"
        android:text="@string/resume"
        android:background="@drawable/outline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:onClick="resumeRound"/>
</RelativeLayout>
