<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_warning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rockyourglock.android.shootingtimer.WarningActivity">

    <TextView
        android:id="@+id/tv_warning_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/warning"
        android:textSize="42sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_below="@id/tv_warning_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/warning_text"
        android:textColor="@color/colorLight"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/outline_button"
        android:onClick="agreeToWarning"/>

</RelativeLayout>
