<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_round_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rockyourglock.android.shootingtimer.RoundSettingsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_string"
        android:background="@drawable/outline_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="toRound"/>

    <TextView
        android:id="@+id/tv_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorLight"
        android:text="@string/duration_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_duration_label"
        android:layout_toRightOf="@+id/tv_duration_label"
        android:layout_toEndOf="@+id/tv_duration_label"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textColor="@color/colorLight" />

    <SeekBar
        android:id="@+id/sb_round_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_duration_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:max="59"/>

    <View
    android:id="@+id/line1"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_below="@id/sb_round_duration"
    android:layout_marginTop="20dp"
    android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_start_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginTop="16dp"
        android:textSize="25dp"
        android:textColor="@color/colorLight"
        android:text="@string/start_in_label"/>

    <TextView
        android:id="@+id/tv_start_in_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_start_in"
        android:layout_toRightOf="@+id/tv_start_in"
        android:layout_toEndOf="@+id/tv_start_in"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textColor="@color/colorLight" />

    <SeekBar
        android:id="@+id/sb_start_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_start_in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:max="14"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/sb_start_in"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_time_to_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginTop="16dp"
        android:textSize="25dp"
        android:textColor="@color/colorLight"
        android:text="@string/time_between_items"/>

    <TextView
        android:id="@+id/tv_time_to_item_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_time_to_item"
        android:layout_toRightOf="@+id/tv_time_to_item"
        android:layout_toEndOf="@+id/tv_time_to_item"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textColor="@color/colorLight" />

    <SeekBar
        android:id="@+id/sb_time_to_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_time_to_item"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:max="26"/>


</RelativeLayout>
